--- a/HangfireConsole/App.config
+++ b/HangfireConsole/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=SUYLAP118;User Id=sa; Password=Socxo@123;Database=HangfireDB;"/>
+    <add name="DefaultConnection" connectionString="Server=10.0.75.1;User Id=sa; Password=Socxo@123;Database=HangfireDB;"/>
   </connectionStrings>
 </configuration>
