Docker file added to the project

--- a/HangfireConsole/HangfireConsole.csproj
+++ b/HangfireConsole/HangfireConsole.csproj
@@ -94,6 +94,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
   </ItemGroup>
